--- a/src/main/java/mx/uv/view/administrador/ev.html
+++ b/src/main/java/mx/uv/view/administrador/ev.html
@@ -14,7 +14,8 @@
         <div class="card">
             <div class="card-header">
                 <h1>Administrar empleados</h1>
-                <button id="btn" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Nuevo empleado </button>
+                <button id="btn" type="button" onclick="btn_menu()" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Regresar</button>
+                <button id="btn" type="button"  class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Nuevo empleado </button>
             </div> 
         
             <div class="card-body">
@@ -29,7 +30,6 @@
                         <th scope="col">Teléfono</th>
                         <th scope="col">Contraseña</th>
                         <th scope="col">Estatus</th>
-                      
                         <th>Acciones</th>
                     </tr>
                     </thead>
@@ -80,8 +80,7 @@
                             <div class="mb-3">
                                 <label for="" class="form-label">Estatus</label>
                                 <input type="text" class="form-control" id="estatusEmpleado">
-                             </div>
-                            
+                             </div>                    
                             
                           </form>
                     </div>
@@ -122,7 +121,7 @@
       method :'POST'
 
     }
-    axios.get('http://localhost/empleados')
+    axios.get('http://localhost:1024/empleados')
     .then(response => {
       users = response.data;  
       users.forEach(element => {
@@ -191,7 +190,7 @@ function mostrarAlerta(){
         let telefono = document.getElementById ("telEmpleado").value;
         let password= document.getElementById ("passEmpleado").value;
         let estatus = document.getElementById ("estatusEmpleado").value;
-        axios.post("http://localhost/", {
+        axios.post("http://localhost:1024/", {
             nombre : nombre,
             apellidoPaterno: apellidoPaterno,
             apellidoMaterno: apellidoMaterno,
@@ -211,6 +210,6 @@ function mostrarAlerta(){
     
 </script>
 
-  
+<script src="/target/classes/mx/uv/controller/script.js"></script>  
 
 </html>
