--- a/src/main/java/mx/uv/view/administrador/ev.html
+++ b/src/main/java/mx/uv/view/administrador/ev.html
@@ -4,17 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Empleados</title>
+    <link rel="shortcut icon" href="/src/main/java/mx/uv/view/img/Primera.png">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/target/classes/mx/uv/controller/Admin.js"></script>
   </head>
 <body>
     <div class="container">
         <div class="card">
             <div class="card-header">
                 <h1>Administrar empleados</h1>
-                <button id="btndistinto" type="button" onclick="btn_menu()" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Regresar</button>
+                <button id="btndistinto" type="button" onclick="btn_menu()" class="btn btn-primary" data-bs-toggle="modal">Regresar</button>
                 <button id="btn" type="button"  class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Nuevo empleado </button>
             </div> 
         
@@ -175,7 +177,7 @@
       method :'POST'
 
     }
-    axios.get('http://localhost/empleados')
+    axios.get('http://localhost:1024/empleados')
     .then(response => {
       users = response.data;  
       users.forEach(element => {
@@ -273,7 +275,7 @@ window.addEventListener('click',(e)=>{
         if (nombre !="" && apellidoPaterno !="" && apellidoMaterno!="" && correoElectronico!="" && direccion!="" && telefono!="" && password!="" && estatus!="" ) {
           
         
-          axios.post("http://localhost/", {
+          axios.post("http://localhost:1024/", {
               nombre : nombre,
               apellidoPaterno: apellidoPaterno,
               apellidoMaterno: apellidoMaterno,
@@ -315,7 +317,7 @@ window.addEventListener('click',(e)=>{
         if (nombre !="" && apellidoPaterno !="" && apellidoMaterno!="" && correoElectronico!="" && direccion!="" && telefono!="" && password!="" && estatus!="" ) {
           
         
-          axios.post("http://localhost/actualiza", {
+          axios.post("http://localhost:1024/actualiza", {
               nombre : nombre,
               apellidoPaterno: apellidoPaterno,
               apellidoMaterno: apellidoMaterno,
@@ -354,7 +356,7 @@ window.addEventListener('click',(e)=>{
     btEliminar.addEventListener ("click", function () {
       let idEmpleado = document.getElementById ("nombreEmpleado").value;
         
-          axios.post("http://localhost/elimina", {
+          axios.post("http://localhost:1024/elimina", {
              idEmpleado:idEmpleado
               
           })
